Issue #19287: Fixed the "in" operator of dbm.ndbm databases for string argument.  Original patch by Arfrever Frehtes Taifersar Arahesis.